// `Removed` for deprecated features removed in this release.
// `Fixed` for any bug fixes.
// `Security` to invite users to upgrade in case of vulnerabilities.

v1.8.0 (unreleased)
-------------------

Changed
~~~~~~~

- The statusbar text for passthrough mode now shows all configured bindings to
  leave the mode, not only one.

v1.7.0 (2019-07-18)
-------------------

Added
~~~~~

- New settings:
  * `colors.tabs.pinned.*` to control colors of pinned tabs.
  * `hints.leave_on_load` which allows disabling leaving of hint mode when a
    new page is loaded.
  * `colors.completion.item.selected.match.fg` which allows configuring the
    text color for the matching text in the currently selected completion item.
  * `tabs.undo_stack_size` to limit how many undo entries are kept for closed tabs.
- New commands:
  * `:reverse-selection` (`o` in caret mode) to swap the stationary/moving ends
    of a selection.
- New commandline replacements:
  * `{url:domain}`, `{url:auth}`, `{url:scheme}`, `{url:username}`,
    `{url:password}`, `{url:host}`, `{url:port}`, `{url:path}`, `{url:query}`
    for the respective parts of the current URL.
  * `{title}` for the current page title.
- The `{title}` field in `tabs.title.format`, `tabs.title.format_pinned` and
  `window.title_format` got renamed to `{current_title}` (mirroring
  `{current_url}`) in order to not conflict with the new `{title}` commandline
  replacement.
- New `delete` target for `:hint` which removes the hinted element from
  the DOM.
- New `--config-py` commandline argument to use a custom `config.py` file.
- Qt 5.13: Support for notifications (shown via system tray).

Changed
~~~~~~~

- Updated dependencies for Windows/macOS releases:
   - PyQt5 5.12.3 / PyQtWebEngine 5.12.1
   - Qt 5.12.4, which includes security fixes up to Chromium 74.0.3729.157
   - Python 3.7.4
   - OpenSSL 1.1.1
   - Note: This release includes Qt 5.12.4 instead of Qt 5.13.0 due to